--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,9 @@
         </div>
 
         
-        <div class="header-2 col-md-8 collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="row">
-              <div class="col-md-6">
+        <div class="col-md-8 collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="row header2">
+              <div class="col-md-6" >
                 <ul class="navbar-nav mr-auto">
                   <!-- <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
