--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -3,6 +3,26 @@
 
 {% block content %}
 
-Hello World!
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>Brows Topics</h2>
+       
+        {% include 'base/topics.html' %}
+     
+      </div>
+      <div class="col-6">
+         <h2>My Channels</h2>
+         
+
+      </div>
+      <div class="col">
+        <h2>Brows Channels</h2>
+       
+        
+      </div>
+    </div>
+</div>
+
 
 {% endblock %}
