styled browse-channel area in index.html

--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -6,19 +6,20 @@
 <div class="container">
     <div class="row">
       <div class="col">
-        <h2>Brows Topics</h2>
+        <h2 class="index-headline">Brows Topics</h2>
        
         {% include 'base/topics.html' %}
      
       </div>
       <div class="col-6">
-         <h2>My Channels</h2>
+         <h2 class="index-headline">My Channels</h2>
          
 
       </div>
       <div class="col">
-        <h2>Brows Channels</h2>
-       
+        <h2 class="index-headline">Brows Channels</h2>
+
+        {% include 'base/browse-channel.html' %}
         
       </div>
     </div>
