--- a/slackbook_user/templates/base/topics.html
+++ b/slackbook_user/templates/base/topics.html
@@ -1,23 +1,11 @@
-<H1>Hello was geht?</H1>
-
-<div class= "row test text-light bg-dark">
-    <div class="col-6">
-{% for topic in channel %}
-    
-test
-{{ topic.title }}
-    <br>
-{% endfor %}
-</div>
-</div>
-<H1>Hello was geht?</H1>
-
-<div>
-    {% for topic in channel %}
-        {{ test2 }}
+<div class="row justify-content-around">
+    <div class="col-4">
+        {% for topic in topics %}
+        
+        {{ topic.title }}
         <br>
-    {% endfor %}
-    test
 
+        {% endfor %}
+        <button>more</button>
+    </div>
 </div>
-
