--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,9 @@
     width: 100%;
     background-color: darkcyan;
     border-radius: 10px;
+    margin: 20px auto;
+    padding: 5px;
+    text-align: center;
 }
 
 .main-content a{
@@ -59,6 +62,8 @@
     background-color: rgb(57, 57, 57);
     border-radius: 10px;
     padding: 2px;
+    border: 1px solid darkcyan;
+    margin: 10px auto;
 }
 
 /* Footer */
