--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@
     --bs-gutter-y: 0;
 }
 
+.brand{
+    border: 2px solid rgb(57, 57, 57)
+}
+
 .header{
     text-align: center;
     display: block ruby;
