add personal Channels to index.html + style

--- a/slackbook_user/templates/base/browse-channel.html
+++ b/slackbook_user/templates/base/browse-channel.html
@@ -3,7 +3,7 @@
 
         {% for channel in channels %}
 
-        <div>
+        <div class="channel-content">
             <div><h5><a href="{% url 'channel' channel.id %} ">{{channel.title}}</a></h5></div>
             <a href="#"><span>@ <i class="fas fa-user"></i> {{ channel.host.username }}</span></a>
             <!-- host.user is a django function -->
