--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -5,23 +5,22 @@
 
 <div class="container">
     <div class="row">
+
       <div class="col">
         <h2 class="index-headline">Brows Topics</h2>
-       
         {% include 'base/topics.html' %}
-     
       </div>
-      <div class="col-6">
-         <h2 class="index-headline">My Channels</h2>
-         
 
+      <div class="col-5 index-center">
+         <h2 class="index-headline">My Channels</h2>
+         {% include 'base/account-index.html' %}
       </div>
+
       <div class="col">
         <h2 class="index-headline">Brows Channels</h2>
-
         {% include 'base/browse-channel.html' %}
-        
       </div>
+
     </div>
 </div>
 
