--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,12 +45,16 @@
     text-align: center;
 }
 
+.index-center{
+    margin: 0 50px;
+}
+
 .main-content{
     width: 100%;
     background-color: darkcyan;
     border-radius: 10px;
     margin: 20px auto;
-    padding: 5px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -77,7 +81,7 @@
 .channel-content{
     background-color: rgb(57, 57, 57);
     border-radius: 10px;
-    padding: 2px;
+    padding: 10px;
     border: 1px solid darkcyan;
     margin: 10px auto;
 }
