--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -8,7 +8,7 @@
 
       <div class="col">
         <h2 class="index-headline">Brows Topics</h2>
-        {% include 'base/topics.html' %}
+        {% include 'base/topics-index.html' %}
       </div>
 
       <div class="col-5 index-center">
