--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,8 @@
 }
 
 .brand{
-    border: 2px solid rgb(57, 57, 57)
+    border: 2px solid rgb(57, 57, 57);
+    border-radius: 5px;
 }
 
 .header{
@@ -38,7 +39,14 @@
 
 .button{
     background-color: unset;
+    color: darkcyan;
+    border-color: darkcyan;
 }
+
+.btn-outline-success {
+    color: darkcyan;
+    border-color: darkcyan;
+  }
 
 /* Main Content */
 .container{
