--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                     </div>
               <div class="col-md-6">
                 <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="s">
                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
               </div>
