--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -13,7 +13,7 @@
             {% for topic in channels %}
             <div>     
                 <h3>{{channel_count}} hosted Channels</h3>      
-                <a href="#">Create Channel</a>
+                <a href="{% url 'create-channel' %}">Create Channel</a>
             <div>
             <br>            
             
