--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 
                         <div class="dropdown-divider"></div>
                         {% if user.is_authenticated %}
-                          <a class="dropdown-item" href="#">Settings</a>
+                          <a class="dropdown-item" href="{% url 'user-settings' %}">Settings</a>
                         {% endif %}
                         <li class="nav-item">
                           <a class="nav-link" href="#">All Channels</a>
