--- a/slackbook_user/templates/base/browse-channel.html
+++ b/slackbook_user/templates/base/browse-channel.html
@@ -11,7 +11,7 @@
             <br>
             <!-- this leads to channel(name!) with the right id -->
             <div class="channel-content">{{channel.content}}</div>
-            <a href="#"><i class="fas fa-user-friends"></i></a> {{ channel.guests.count }} Members
+            <a href="{% url 'member' channel.id %}"><i class="fas fa-user-friends"></i></a> {{ channel.guests.count }} Members
             <span class="category-open"><small> - Category: <a href="#">{{ channel.topic.title }}</a></small></span>
             <hr>
         </div>
