--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -19,8 +19,8 @@
             <div class="channel-content">
                 <h5><a href="{% url 'channel' topic.id %} ">{{topic.title}}</a></h5>
                 {% if request.user == topic.host %}
-                    <a href="#">Edit</a>
-                    <a href="#">Delete</a>
+                    <a href="{% url 'update-channel' topic.id %}">Edit</a>
+                    <a href="{% url 'delete-channel' topic.id %}">Delete</a>
                 {% endif %}
                 <br>
                 <div class="channel-content">{{topic.content}}</div>
