add change private status to create, update channel

--- a/slackbook_user/templates/base/create-channel.html
+++ b/slackbook_user/templates/base/create-channel.html
@@ -47,13 +47,13 @@
                     <label for="private">Is this a private channel?</label>
                     <br>
                     <!-- {{ form.private }} -->
-                    Yes, only for invited guests
+                    False
                     <input type="checkbox" value="False" name="private">
                     <br>
-                    It's a free channel
+                    True
                     <input type="checkbox" value="True" name="private">
-                    <!-- <button name="private" value="True">Set to True</button> -->
-                    <!-- <button name="private" value="False">Set to False</button> -->
+                    <button name="private" value="True">Set to True</button>
+                    <button name="private" value="False">Set to False</button>
                 </div>
                 <br>
                 <div>
