--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,13 @@
     border-radius: 5px;
 }
 
+.user-image{
+    width: 25px;
+    height: 25px;
+    border: 2px solid darkcyan;
+    border-radius: 50px;
+}
+
 .header{
     text-align: center;
     display: block ruby;
