--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,8 @@
                       {% if user.is_authenticated %}
                           {{ request.user.username }}
                       {% endif %}
-                      <i class="fas fa-user"></i>
+                      <!-- <i class="fas fa-user"></i> -->
+                      <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image">
                       </button>
                       <div class="dropdown-menu">
                         <!-- <a class="dropdown-item" href="#">Action</a>
