add change prifile image for user-setting

--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -23,8 +23,15 @@
                 {% if comment.user.username == request.user.username and request.user.username != comment.channel.host.username%}
                 <div class="channel-content"> 
                     <h4><a href="#">{{ comment.channel.title }}</a></h4>
+
+                    <!-- test{{comment.channel.host.account_logout.value}}test -->
+
                     {% if comment.channel.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                        <img class="user-image" src="/static/images/avatar.png" alt="logo">                      
+                        {% if comment.channel.host.is_authenticated %}
+                        <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                        {% else %}
+                        <img class="user-logedout" src="/static/images/avatar.png" alt="logo">
+                        {% endif %}                 
                     {% else %}
                         <img class="user-image" src="{{ comment.channel.host.avatar.url }}" alt="user-image">
                     {% endif %}
@@ -55,6 +62,7 @@
 
         {% if request.user == topic.host or request.user == topic_post.user %}
         <div class="channel-content">
+            <!-- {{ topic.host.account_logout }} -->
             <h4><a href="{% url 'channel' topic.id %} ">{{topic.title}}</a></h4>
             <img class="user-image" src="{{ topic.host.avatar.url }}" alt="user-image">
             <a href="{% url 'account' topic.host.id %}"><h5>@{{topic.host.username}}</h5></a><i class="fas fa-user"></i>
